--- a/src/blocks/card/__image/_type/_1/card__image_type_1.css
+++ b/src/blocks/card/__image/_type/_1/card__image_type_1.css
@@ -1,3 +1,5 @@
 .card__image_type_1 {
     background-image: url(../../../../../images/Card.jpg);
+    background-position: center;
+    background-size: cover;
 }
