--- a/src/blocks/loader/__circle/loader__circle.css
+++ b/src/blocks/loader/__circle/loader__circle.css
@@ -5,8 +5,8 @@
     display: block;
     width: 50px;
     height: 50px;
-    border: 4px solid #444;
-    border-bottom-color: #888;
+    border: 2px solid rgb(15, 46, 97);
+    border-bottom-color: rgb(70, 104, 199);
 
     border-radius: 50%;
 
