--- a/src/blocks/loader/loader.css
+++ b/src/blocks/loader/loader.css
@@ -2,9 +2,16 @@
 @import '../loader/__wrapper/loader__wrapper.css';
 @import '../loader/__text/loader__text.css';
 
+
+
+
+
+
 .loader {
-    /* display: none; */
+    display: none;
     max-width: 100%;
     background: #F5F6F7;
     border-bottom: 1px solid rgba(128, 128, 128, 0.609);
+
+
 }
