--- a/src/blocks/not-found/not-found.css
+++ b/src/blocks/not-found/not-found.css
@@ -5,7 +5,7 @@
 @import '../not-found/__subtitle/not-found__subtitle.css';
 
 .not-found {
-    /* display: none; */
+    display: none;
     background: #F5F6F7;
     border-bottom: 1px solid rgba(128, 128, 128, 0.609);
 
