--- a/src/blocks/result/__cards/result__cards.css
+++ b/src/blocks/result/__cards/result__cards.css
@@ -2,6 +2,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(400px, auto));
     gap: 16px;
+    padding-bottom: 30px;
 }
 
 
