--- a/src/blocks/result/result.css
+++ b/src/blocks/result/result.css
@@ -3,6 +3,7 @@
 @import '../result/__wrapper-card-block/result__wrapper-card-block.css';
 
 .result {
+    display: none;
     background: #F5F6F7;
 
 }
