--- a/src/blocks/diagram/__text-date/diagram__text-date.css
+++ b/src/blocks/diagram/__text-date/diagram__text-date.css
@@ -1,3 +1,11 @@
+@import '../__text-date/_type/diagram__text-date_type-0.css';
+@import '../__text-date/_type/diagram__text-date_type-1.css';
+@import '../__text-date/_type/diagram__text-date_type-2.css';
+@import '../__text-date/_type/diagram__text-date_type-3.css';
+@import '../__text-date/_type/diagram__text-date_type-4.css';
+@import '../__text-date/_type/diagram__text-date_type-5.css';
+@import '../__text-date/_type/diagram__text-date_type-6.css';
+
 .diagram__text-date {
     font-family: "Roboto", Arial, Helvetica, sans-serif;
     font-size: 18px;
